--- a/src/test.scss
+++ b/src/test.scss
@@ -1,5 +1,10 @@
-body {
-  //background: blue;
+.videos-container,
+.videos-title,
+.login-box,
+.pagination-numbers {
+    width:50%;
+    margin: 0 auto;
 }
-
-
+.app-body {
+    margin-top: 30px;
+}
