--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
-.videos-container,
 .videos-title,
-.login-box,
-.pagination-numbers {
+.pagination-numbers,
+.videos-container,
+.app-body {
   width: 50%;
   margin: 0 auto; }
 
 .app-body {
+  background-color: antiquewhite;
+  width: 700px;
   margin-top: 30px; }
+
+.videos-search {
+  margin: 20px; }
