--- a/src/test.scss
+++ b/src/test.scss
@@ -1,10 +1,16 @@
-.videos-container,
 .videos-title,
-.login-box,
-.pagination-numbers {
-    width:50%;
+.pagination-numbers,
+.videos-container,
+.app-body {
+    width: 50%;
     margin: 0 auto;
 }
 .app-body {
+    background-color:antiquewhite;
+    width: 700px;
     margin-top: 30px;
+}
+
+.videos-search {
+    margin: 20px;
 }
